<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
                android:id="@+id/player_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_label"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/player_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:id="@+id/player_1_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>

        <TextView
                android:id="@+id/score_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_separator"
                android:textSize="24sp"/>

        <TextView
                android:id="@+id/player_2_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp" />
    </LinearLayout>

    <GridLayout
            android:id="@+id/board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="5">

    </GridLayout>
    <Button
            android:id="@+id/confirm"
            android:text="@string/confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="confirmMove"/>


</LinearLayout>