<resources>
    <string name="app_name">SMiM</string>
    <string name="player_label">Player&#160;</string>
    <string name="confirmation">Confirm move</string>
    <string name="score_separator">:</string>

    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="scoreboard_title">Scoreboard</string>
</resources>
