package com.example.maciej.smim


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.filters.LargeTest
import androidx.test.rule.ActivityTestRule
import androidx.test.runner.AndroidJUnit4
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class ChangeButtonBeforeConfirmTest {

    @Rule
    @JvmField
    var mActivityTestRule = ActivityTestRule(HotseatGameActivity::class.java)

    @Test
    fun changeButtonBeforeConfirmTest() {
        val button = onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.board),
                        childAtPosition(
                            withId(R.id.main_layout),
                            2
                        )
                    ),
                    6
                ),
                isDisplayed()
            )
        )
        button.perform(click())

        val button2 = onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.board),
                        childAtPosition(
                            withId(R.id.main_layout),
                            2
                        )
                    ),
                    7
                ),
                isDisplayed()
            )
        )
        button2.perform(click())

        val appCompatButton3 = onView(
            allOf(
                withId(R.id.confirm), withText("Confirm move"),
                childAtPosition(
                    allOf(
                        withId(R.id.main_layout),
                        childAtPosition(
                            withId(android.R.id.content),
                            0
                        )
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        appCompatButton3.perform(click())

        val button3 = onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.board),
                        childAtPosition(
                            withId(R.id.main_layout),
                            2
                        )
                    ),
                    6
                ),
                isDisplayed()
            )
        )
        button3.check(matches(withText("")))

        val button4 = onView(
            allOf(
                childAtPosition(
                    allOf(
                        withId(R.id.board),
                        childAtPosition(
                            withId(R.id.main_layout),
                            2
                        )
                    ),
                    7
                ),
                isDisplayed()
            )
        )
        button4.check(matches(withText("O")))
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View>, position: Int
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
}
